Try to frontend now went the sms was send

--- a/src/app/style/App.css
+++ b/src/app/style/App.css
@@ -114,6 +114,9 @@ label {
 .block {
   display: block !important;
 }
+.app-pacman-loading {
+  max-width:  6rem;
+}
 @keyframes App-logo-opacity {
   50% {
     opacity: 0.5;
